2001-05-13  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncPostFileOpen): fix bug -- current_book
	might be changed by book-opened-hook.

	* src/scm/tip-list.scm: fix tip

	* src/engine/Account.c (finder_help_function): fix warning

2001-05-13  Kevin Finn  <kevinfinn@mediaone.net>

	* src/SplitLedger.c, src/engine/Account.c, src/engine/Account.h:
	moved function gnc_find_trans_in_account_by_desc from SR to become
	new functions xaccAccountFindTransByDesc and
	xaccAccountFindSplitByDesc so they could be used outside of the
	register code.

	* src/gnome/dialog-transfer.c: Added quickfill/autocomplete
	functionality to the transfer dialog, based on the Description.

2001-05-13  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: write commodities with accounts

	* src/engine/io-gncxml-v2.c (write_commodities): make public

	* src/gnome/new-user.glade: tweak gui

	* src/gnome/window-main.c: the "destroy" handler does not
	return a result. add menu item & functionality for account
	hierarchy export.

	* src/scm/report/welcome-to-gnucash.scm: take out the ugly :)

2001-05-12  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/category-barchart.scm, net-barchart.scm,
	average-balance.scm: Added price-source option. Uses new function
	gnc:make-exchange-nearest-function to offer time-varying exchange
	rates.

	* src/scm/report-utilities.scm
	(gnc:acccounts-get-all-subaccounts): added.

	* src/scm/commodity-utilities.scm
	(gnc:make-exchange-nearest-function): Added this and many more
	functions to enable time-variant currency exchange.

	* src/scm/report/price-scatter.scm: Add warnings if data is empty.

2001-05-12  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-options.c: fix destructor bug 

	* src/gnome/window-report.c: add options dialog to edited list
	even if opened by a URL click. 
	
	* src/gnome/window-main.c: handle close of last window safely.
	Still don't save MDI info correctly with WM close, though.
